service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-rms
spec:
  selector:
    app: app-rms
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
#      nodePort: 30012
