ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rms

spec:
  rules:
  - host: "rms.app"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-rms
            port:
              number: 80
